[package]
name = "midnight-rider"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.85"
bitcoin = { version = "0.32.3", features = ["rand", "rand-std"] }
# ddk = "0.0.14"
ddk = { path = "../dlcdevkit/ddk" }
dlc-messages = { version = "0.7.1", features = ["use-serde"] }
lightning = "0.0.125"
lightning-net-tokio = "0.0.125"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[[bin]]
name = "city-tavern"
path = "src/bin/proxy.rs"
